--- a/styles/g3.css
+++ b/styles/g3.css
@@ -110,7 +110,30 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* features section related style */
 
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+    /* margin-bottom: 20px; */
+}
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 1px 4px 3px 1px rgba(0, 0, 0.06);
+    margin-bottom: 20px;
+}
+
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin: 0 0 0 0;
+
+
+}
 /* some facts related styles */
 .facts-container{
  display: grid;
