--- a/styles/g3.css
+++ b/styles/g3.css
@@ -131,8 +131,17 @@ main > section{
     font-weight: 600;
     font-size: 1.25rem;
     margin: 0 0 0 0;
-
-
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 4rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
 }
 /* some facts related styles */
 .facts-container{
